[package]
name = "blockbook"
version = "0.1.0"
authors = ["21Analytics <info@21analytics.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A robust and blazing fast blockbook blockexporer client"
keywords = ["crypto", "bitcoin", "blockexplorer", "blockbook", "client"]

[dependencies]
bitcoin = { version = "0.29", default-features = false, features = [ "std", "serde" ] }
reqwest = { version = "0.11", default-features = false, features = ["rustls", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
url = "2"

[dev-dependencies]
once_cell = "1"
serde_test = "1"
tokio = { version = "1", features = ["macros"] }

[features]
test = []
