[package]
name = "blockbook"
version = "0.1.0"
authors = ["21 Analytics <info@21analytics.ch>"]
edition = "2021"
license = "MIT"
description = "A robust and blazing fast blockbook blockexporer client"
documentation = "https://docs.rs/blockbook/"
homepage = "https://21analytics.ch"
repository = "https://gitlab.com/21analytics/blockbook"
keywords = ["crypto", "bitcoin", "blockexplorer", "blockbook", "client"]
categories = ["api-bindings"]

[dependencies]
bitcoin = { version = "0.30", default-features = false, features = [ "std", "serde" ] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
erased-serde = "0.3"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls", "rustls-tls", "json"] }
semver = { version = "1", features = [ "serde" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = [ "macros" ] }
tokio-tungstenite = { version = "0.18", features = [ "rustls-tls-webpki-roots" ] }
tracing = { version = "0.1", default-features = false }
url = "2"
uuid = { version = "1", features = [ "serde", "v4" ] }

[dev-dependencies]
once_cell = "1"
serde_test = "1"
tokio = { version = "1", features = [ "macros", "time", "parking_lot" ] }
tokio-test = "0.4"

[features]
test = []
